# ComfyUI-Bernini

./: LICENSE  README.md  README_ZH.md  __init__.py  pyproject.toml
bernini/: __init__.py  official_pe_templates.py  prompt_enhance_templates.py  prompt_enhancer.py
bernini/director/: executor.py  executor_core.py  gen_timeline.py  http_routes.py  plan.py  prompt_enhance_media.py  prompt_enhance_routes.py  prompt_enhance_runtime.py  segment_cache.py  segment_continuity.py
bernini/nodes/: director.py  director_common.py  director_official.py
engine/: bernini_denoise.py  nodes_sampler.py
tests/: test_prompt_enhance_templates.py  test_prompt_enhancer_parse.py  test_segment_continuity.py
web/js/: bernini_prompt_enhancer.js  bernini_prompt_mentions.js  bernini_timeline.js
